--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <img src="kiko-meditation.png" alt="Kiko - Your meditation companion" class="lion-icon">
+            <img src="kiko-coffee.png" alt="Kiko - Your meditation companion" class="lion-icon">
             <h1>A Lion at Heart</h1>
             <p class="tagline">Meditation powered by community</p>
             <div class="ubuntu-quote">
