--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             overflow-x: hidden;
         }
 
+// Send to Google Sheets
+const GOOGLE_SHEETS_URL = 'PASTE_YOUR_URL_HERE'; // <-- Paste your URL here!
+
+await fetch(GOOGLE_SHEETS_URL, {
+    method: 'POST',
+    mode: 'no-cors',
+    headers: {
+        'Content-Type': 'application/json',
+    },
+    body: JSON.stringify({
+        email: email,
+        source: 'landing_page',
+        timestamp: new Date().toISOString()
+    })
+});        
         /* Hero Section - Warm colors matching Kiko */
         .hero {
             min-height: 100vh;
