--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
 // Send to Google Sheets
-const GOOGLE_SHEETS_URL = 'PASTE_YOUR_URL_HERE'; // <-- Paste your URL here!
+const GOOGLE_SHEETS_URL = 'https://script.google.com/macros/s/AKfycbzCdvM5yC6KvHKJi0urbZ1JSHJvF6TbTddKLTSN6Dd-dRELUDMoLINjlVPgCI6KE1uJFg/exec; //
 
 await fetch(GOOGLE_SHEETS_URL, {
     method: 'POST',
